--- a/css/styles.css
+++ b/css/styles.css
@@ -328,7 +328,8 @@ align-items: center;
   
 }
 .hero-title{
-max-width: 428px;
+max-width: 767px;
+width: 100%;
    height: 432px;
    margin-left: auto;
    margin-right: auto;
@@ -545,7 +546,7 @@ flex-basis: calc((100% - 72px) / 4);
       display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 120px;
+    /* gap: 120px; */
     padding: 100px 0;
     background-color: var(--dark);
       
@@ -1212,7 +1213,7 @@ screen and (min-resolution: 2dppx) and (min-width: 768px){
 }
 }
   
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 1158px) {
   .work{
     display: none;
   }
@@ -1316,7 +1317,9 @@ screen and (min-resolution: 2dppx) and (min-width: 768px){
   
 }
 /* -----FOOTER-DESKTOP---- */
-
+.footer{
+  gap: 120px;
+}
 .footer-container{
   display: flex;
   justify-content: space-between;
@@ -1362,7 +1365,7 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px){
   background-image:linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7) ), url(../images/bg-desktop@2x.jpg);
 }
 }
-@media screen and (min-width:768px) and (max-width: 1199px) {
+@media screen and (min-width:768px) and (max-width: 1157px) {
   .principle-item{
 flex-basis: calc((100% - 48px) / 2);
 }
